Added some content to home page

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,12 @@
 <app-top-menu></app-top-menu>
+
+<div id="page-wrapper">
+    <!-- <section id="placeholder">
+        <p>Add products to follow</p>
+        <p>Start searching now!</p>
+    </section> -->
+    
+    <section id="search-button">
+        <button><i class="material-icons">search</i></button>
+    </section>
+</div>
