--- a/src/app/components/top-menu/top-menu.component.scss
+++ b/src/app/components/top-menu/top-menu.component.scss
@@ -1,7 +1,8 @@
-section {
+section.top {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 99;
 
     width: 100%;
     height: 59px;
@@ -11,9 +12,6 @@ section {
     align-items: center;
     
     background-color: #2f3640;
-    
-    border-style: solid;
-    border-width: 0 0 1px 0;
 
     button {
         background-color: unset;
@@ -27,4 +25,28 @@ section {
         color: white;
     }
 
+}
+
+section.bottom {
+    z-index: 98;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #353b48;
+    display: flex;
+    justify-content: center;
+    transition: 200ms all ease-in-out;
+    input {
+        margin: 8px 0;
+        width: 90%;
+        border: unset;
+        border-radius: 3px;
+        padding: 8px 5px;
+        outline: none;
+    }
+}
+
+section.bottom.opened {
+    top: 58px;
 }
