First test: Search bar

--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -1,4 +1,4 @@
-<section class="top" (click)="this.toggleSearchBar()" >
+<section class="top">
     <i class="material-icons">menu</i>
     <i class="material-icons">more_vert</i>
 </section>
