--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -34,6 +34,7 @@ div#page-wrapper {
             border: unset;
             padding: 7px 0 5px 0;
             box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+            cursor: pointer;
 
             i {
                 color: white;
