--- a/src/app/components/top-menu/top-menu.component.scss
+++ b/src/app/components/top-menu/top-menu.component.scss
@@ -5,48 +5,78 @@ section.top {
     z-index: 99;
 
     width: 100%;
-    height: 59px;
-    
+    height: 64px;
+
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    
-    background-color: #2f3640;
+    justify-content: space-between;
 
-    button {
-        background-color: unset;
-        outline: none;
-        border: unset;
-    }
-    
+    background-color: #24292E;
+
     i {
-        margin: 0 6px 0 10px;
+        margin: 0 10px;
         font-size: 27px;
-        color: white;
+        color: #F6F8FA;
+        cursor: pointer;
     }
 
-}
+    span {
+        color: #F6F8FA;
+        text-transform: uppercase;
+        font-weight: 600;
+    }
 
-section.bottom {
-    z-index: 98;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #353b48;
-    display: flex;
-    justify-content: center;
-    transition: 200ms all ease-in-out;
-    input {
-        margin: 8px 0;
-        width: 90%;
+    input#search {
+        width: 100%;
+        padding: 6px;
+        margin-right: 10px;
+        border-radius: 5px;
+        background-color: #3F4448;
         border: unset;
-        border-radius: 3px;
-        padding: 8px 5px;
+        color: #F6F8FA;
         outline: none;
+        transition: 50ms box-shadow ease-in-out;
+    }
+
+    input#search:focus {
+        box-shadow: 0px 0px 1px 2px #2f3640;
+    }
+
+}
+
+section.menu-opened {
+    position: fixed;
+    top: 64px;
+    left: 0;
+    z-index: 99;
+    padding-bottom: 20px;
+
+    width: 100%;
+    
+    background-color: #24292E;
+
+    ul {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+
+        li {
+            margin: 0 15px;
+            padding: 10px 0;
+            border-top: 1px solid #45494D;
+            list-style: none;
+            font-weight: 600;
+            color: #F6F8FA;
+            white-space: nowrap;
+            font-size: 14px;
+            cursor: pointer;
+        }
+        // li:first-child {
+        //     border-top: unset;
+        // }
     }
 }
 
-section.bottom.opened {
-    top: 58px;
+section.menu-closed {
+    display: none;
 }
