Create search page.

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <app-top-menu #searchBar></app-top-menu>
 
-<div id="page-wrapper">    
+<div id="page-wrapper">   
     <section id="search-button">
-        <button (click)="this.searchBar.toggleSearchBar()"><i class="material-icons">search</i></button>
+        <button><i class="material-icons">search</i></button>
     </section>
 </div>
