--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,64 +1,84 @@
 div#page-wrapper {
-    top: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #F6F8FA;
+
+  #placeholder {
+    p {
+      text-align: center;
+      text-transform: uppercase;
+      font-family: 'Roboto', sans-serif;
+      font-size: 18px;
+      font-weight: bold;
+      color: #6f7162;
+    }
+  }
+
+  #search-button {
+    position: absolute;
+    bottom: 3%;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    button {
+      width: 90%;
+      background-color: #28a745;
+      background-image: linear-gradient(-180deg, #34d058, #28a745 90%);
+      border-radius: 3px;
+      outline: none;
+      border: unset;
+      padding: 7px 0 5px 0;
+      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+      cursor: pointer;
+
+      i {
+        color: white;
+      }
+    }
+
+    button:hover {
+      background-color: #269f42;
+      background-image: linear-gradient(-180deg, #2fcb53, #269f42 90%);
+      background-position: -.5em;
+      border-color: rgba(27, 31, 35, .5);
+    }
+
+  }
+
+  #search-button.hide {
+    animation-duration: 0.5s;
+    animation-name: "hide-search-button";
+    bottom: -10%;
+  }
+
+  #search-button.visible {
+    animation-duration: 0.5s;
+    animation-name: "visible-search-button";
+  }
+
+  app-result-list {
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: #F6F8FA;
+    margin: 64px 0px 80px;
+    position: fixed;
 
-    #placeholder {
-        p {
-            text-align: center;
-            text-transform: uppercase;
-            font-family: 'Roboto', sans-serif;
-            font-size: 18px;
-            font-weight: bold;
-            color: #6f7162;
-        }
+    &.hide{
+      transform: translatex(150px);
+      transition: 0.5s;
     }
-    #search-button {
-        position: absolute;
-        bottom: 3%;
-        left: 0;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-
-        button {
-            width: 90%;
-            background-color: #28a745;
-            background-image: linear-gradient(-180deg,#34d058,#28a745 90%);
-            border-radius: 3px;
-            outline: none;
-            border: unset;
-            padding: 7px 0 5px 0;
-            box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-            cursor: pointer;
-
-            i {
-                color: white;
-            }
-        }
-        button:hover {
-            background-color: #269f42;
-            background-image: linear-gradient(-180deg,#2fcb53,#269f42 90%);
-            background-position: -.5em;
-            border-color: rgba(27,31,35,.5);
-        }
+    &.visible {
+      transform: translatex(0px);
+      transition: 0.5s;
     }
+  }
 
-    #search-button.hide {
-      animation-duration: 0.5s;
-      animation-name: "hide-search-button";
-      bottom: -10%;
-    }
-
-    #search-button.visible {
-      animation-duration: 0.5s;
-      animation-name: "visible-search-button";
-    }
 }
 
 @keyframes hide-search-button {
@@ -70,6 +90,7 @@ div#page-wrapper {
     bottom: -10%;
   }
 }
+
 @keyframes visible-search-button {
   100% {
     bottom: 3%;
