--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,8 +1,8 @@
-<app-side-menu #searchBar></app-side-menu>
+<app-tabs-menu #searchBar></app-tabs-menu>
 
 <div id="page-wrapper">
-    <app-result-list #resultList [ngClass]="this.hideSearchButton"></app-result-list>
-    <section id="search-button" [ngClass]="this.hideSearchButton">
+    <app-result-list #resultList></app-result-list>
+    <!-- <section id="search-button" [ngClass]="this.hideSearchButton">
         <button><i class="material-icons">search</i></button>
-    </section>
+    </section> -->
 </div>
