Changes in tab-menu
Added tab-menu to search page.
Restyled tab-menu.

--- a/src/app/components/tabs-menu/tabs-menu.component.scss
+++ b/src/app/components/tabs-menu/tabs-menu.component.scss
@@ -44,7 +44,8 @@ section.top {
 
 }
 .navbar {
-  background-color: #24292E;
+  background-color: #f3f3f3;
+  border-top: 1px solid #D1D5DA;
   overflow: hidden;
   position: fixed;
   bottom: 0;
@@ -54,13 +55,16 @@ section.top {
 
   /* Style the links inside the navigation bar */
   a {
+	display: flex;
+    align-items: center;
+    justify-content: center;
     float: left;
     padding: 12px;
-    color: whitesmoke;
+    color: #353b48;
     text-decoration: none;
     font-size: 17px;
     width: 100%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
-    text-align: center;
+	text-align: center;
   }
 
   /* Change the color of links on hover */
@@ -71,7 +75,14 @@ section.top {
 
   /* Add a color to the active/current link */
   a.active {
-    background-image: linear-gradient(-180deg, #2fcb53, #269f42 90%);
-    color: whitesmoke;
+	color: #44bd32;
+	position: relative;
+  }
+  a.active::after {
+	  content: "";
+	  position: absolute;
+	  width: 100%;
+	  height: calc(100% - 3px );
+	  border-bottom: 3px solid #44bd32;
   }
 }
