--- a/src/app/components/tabs-menu/tabs-menu.component.html
+++ b/src/app/components/tabs-menu/tabs-menu.component.html
@@ -1,15 +1,12 @@
 <section class="top">
-  <!-- <i (click)="this.toggle()" class="material-icons">menu</i> -->
   <input type="text" name="search" id="search" placeholder="Search for products">
-  <span>{{this.activePage}}</span>
-  <i class="material-icons">
-      supervised_user_circle
-  </i>
+  <i class="material-icons">filter_list</i>
 </section>
 
 <section class="navbar">
   <ng-container *ngFor="let page of this.pages">
-    <a *ngIf="page.data?.title" (click)="this.changePage(page.path)" [className]="(this.activePage == page.path) ? 'active' : 'inactive'">
+    <a *ngIf="page.data?.title" (click)="this.changePage(page.path)"
+      [className]="(this.activePage == page.path) ? 'active' : 'inactive'">
       <!-- {{page.data?.title}} -->
       <i class="material-icons">
         {{page.data?.icon}}
