--- a/src/app/components/result-list/result-list.component.html
+++ b/src/app/components/result-list/result-list.component.html
@@ -1,4 +1,4 @@
-<section id="result-list">
+<section id="result-list" [ngClass]="this.theme">
   <ul>
       <li *ngFor="let item of this.products">
         <section class="left">
