--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -6,7 +6,7 @@ div#page-wrapper {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: #FFFFFF;
+  background-color: #d6d6d6;
 
   #placeholder {
     p {
@@ -49,7 +49,10 @@ div#page-wrapper {
       background-position: -.5em;
       border-color: rgba(27, 31, 35, .5);
     }
+  }
 
+  &.dark {
+    background-color: #3F4448;
   }
 
   // #search-button.hide {
