--- a/src/app/components/result-list/result-list.component.html
+++ b/src/app/components/result-list/result-list.component.html
@@ -1,28 +1,32 @@
 <section id="result-list" [ngClass]="this.theme">
   <div class="item" *ngFor="let item of this.products">
     <div class="row">
-      <div class="col first">
+      <div class="col image-holder">
+        <img [src]="item.image">
+      </div>
+      <div class="col description">
         <div class="row">
-          <div class="col image-holder">
-            <img [src]="item.image">
-          </div>
-          <div class="col description">
-            <span>{{item.name}}</span>
+          <div class="col price">
             <span>{{item.price}}€</span>
           </div>
-        </div>
-        <div class="row">
-          <div class="col category">
-            <span>HOGAR > ELECTRONICA</span>
+          <div class="col bdtag">
+            <span *ngIf="item.bestprice">MEJOR PRECIO</span>
           </div>
         </div>
-      </div>
-      <div class="col second">
-        <button>
-          <i class="material-icons">
-            remove_red_eye
-          </i>
-        </button>
+        <div class="row inflate">
+          <div class="col productname">
+            <text-wrap [text]="item.name" [length]="46"></text-wrap>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col button">
+            <button>
+              <i class="material-icons">
+                remove_red_eye
+              </i>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
