--- a/src/app/components/result-list/result-list.component.scss
+++ b/src/app/components/result-list/result-list.component.scss
@@ -1,11 +1,10 @@
 #result-list {
-  height: 100%;
-  padding: 10px 15px 0px 15px;
+  height: calc(100% - 114px);
+  padding: 10px 8px 0px 8px;
   overflow-y: scroll;
 
   div.item {
     width: 100%;
-    padding: 5px;
     margin: 0 0 6px 0;
     background-color: #fdfdfd;
     border: 1px solid #bdbdbd;
@@ -16,64 +15,78 @@
       display: flex;
 
       div.col {
-        width: 100%;
         display: flex;
         flex-direction: column;
       }
 
-      div.first {
-        width: 70%;
+      div.image-holder {
+        width: 40%;
+        padding: 5px;
 
-        div.image-holder {
-          width: 45%;
-
-          img {
-            width: 100%;
-          }
-        }
-
-        div.description {
-          width: 55%;
-          display: inline-block;
-          white-space: nowrap;
-          overflow: hidden !important;
-          text-overflow: ellipsis;
-        }
-
-        div.category {
-          width: fit-content;
-          margin-top: 6px;
-          padding: 2px 8px;
-          font-size: 12px;
-          background-color: #d6d6d6;
-          border-radius: 5px;
-          border: 1px solid #94d48b;
-          color: #197d0a;
-          user-select: none;
-          cursor: pointer;
+        img {
+          width: 100%;
         }
       }
 
-      div.second {
-        width: 30%;
-        justify-content: center;
-        align-items: center;
-
-        button {
+      div.description {
+        width: 60%;
+        padding: 5px;
+        background-color: #eafffc;
+        border-radius: 0 5px 5px 0;
+        
+        div.row {
+          width: 100%;
           display: flex;
-          justify-content: center;
           align-items: center;
-          padding: 5px 8px;
-          background: unset;
-          background-color: #D6D6D6;
-          border-radius: 5px;
-          border: 1px solid #bdbdbd;
-          outline: none;
-          cursor: pointer;
 
-          i {
-            color: #353B48;
+          div.price {
+            span {
+              margin-right: 5px;
+              font-weight: 600;
+              font-size: 18px;
+            }
           }
+  
+          div.bdtag {
+            span {
+              color: #ffffff;
+              background-color: #44bd32;
+              padding: 2px 6px;
+              border-radius: 5px;
+              font-size: 12px;
+            }
+          }
+
+          div.productname {
+            width: 100%;
+            
+            text-wrap {
+              margin: 5px 0;
+              font-size: 15px;
+              white-space: pre-wrap;
+            }
+          }
+
+          div.button {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            button {
+              border-radius: 5px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              padding: 3px 0;
+              border: 1px solid #a3df9b;
+              width: 80%;
+              outline: none;
+            }
+          }
+        }
+        div.inflate {
+          height: 100%;
         }
       }
     }
