--- a/src/app/pages/settings-page/settings-page.component.scss
+++ b/src/app/pages/settings-page/settings-page.component.scss
@@ -1,5 +1,56 @@
 #settings-page {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: #D6D6D6;
+    padding: 0 15px;
+    
+    ul.preferences {
+        position: relative;
+        background-color: #fbfbfb;
+        border-radius: 8px;
+        border: 1px solid #0000003d;
+        box-shadow: 0px 2px 7px -1px rgb(160, 160, 160);
+        margin-top: 80px;
+        padding-left: 0;
+        // padding: 10px;
+
+        span.head {
+            font-size: 17px;
+            width: 100%;
+            display: block;
+            border-bottom: 1px solid #cecece;
+            font-weight: 600;
+            line-height: 32px;
+            padding: 2px 13px;
+            color: #131313;
+        }
+
+        li.preference {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            cursor: pointer;
+
+            div.row {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                span {
+                    display: block;
+                    font-size: 15px;
+                    padding: 14px;
+                }
+
+                i {
+                    padding: 11px;
+                    color: #44bd32;
+                }
+            }
+        }
+    }
 }
