--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <app-top-menu></app-top-menu>
-<div id="page-wrapper" [ngClass]="this.searchBar.theme">
-    <app-result-list #resultList [theme]="this.searchBar.theme"></app-result-list>
+<div id="page-wrapper">
+    <app-result-list #resultList></app-result-list>
     <!-- <section id="search-button" [ngClass]="this.hideSearchButton">
         <button><i class="material-icons">search</i></button>
     </section> -->
