--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -6,7 +6,7 @@ div#page-wrapper {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: #d6d6d6;
+  background-color: white;
 
   #placeholder {
     p {
