--- a/src/app/components/result-list/result-list.component.html
+++ b/src/app/components/result-list/result-list.component.html
@@ -5,26 +5,51 @@
         <img [src]="item.image">
       </div>
       <div class="col description">
-        <div class="row">
-          <div class="col price">
-            <span>{{item.price}}€</span>
-          </div>
-          <div class="col bdtag">
-            <span *ngIf="item.bestprice">MEJOR PRECIO</span>
-          </div>
-        </div>
         <div class="row inflate">
           <div class="col productname">
             <text-wrap [text]="item.name" [length]="46"></text-wrap>
           </div>
         </div>
         <div class="row">
-          <div class="col button">
-            <button>
-              <i class="material-icons">
-                remove_red_eye
-              </i>
-            </button>
+          <div class="col price">
+            <span [ngClass]="{'best':item.bestprice}">{{item.price}}€</span>
+          </div>
+          <div class="col bdtag">
+            <span *ngIf="item.bestprice">MEJOR PRECIO</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row footer">
+      <div class="col">
+        <div class="row">
+          <div class="col shop">
+            <img [src]="this.getPhoto(item.shop)">
+          </div>
+          <div class="col buttons">
+            <div class="row">
+              <div class="col button">
+                <button>
+                  <i class="material-icons">
+                    launch
+                  </i>
+                </button>
+              </div>
+              <div class="col button">
+                <button>
+                  <i class="material-icons">
+                    shopping_cart
+                  </i>
+                </button>
+              </div>
+              <div class="col button">
+                <button class="follow">
+                  <i class="material-icons">
+                    remove_red_eye
+                  </i>
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
