--- a/src/app/pages/settings-page/settings-page.component.html
+++ b/src/app/pages/settings-page/settings-page.component.html
@@ -11,5 +11,18 @@
             </div>
         </li>
     </ul>
+    <app-pop-up>
+        <ul>
+            <li>
+                <span>hola</span>
+            </li>
+            <li>
+                <span>hola</span>
+            </li>
+            <li>
+                <span>hola</span>
+            </li>
+        </ul>
+    </app-pop-up>
 </section>
 <app-tabs-menu></app-tabs-menu>
