--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<router-outlet>
+  <app-top-menu></app-top-menu>
+  <app-tabs-menu #searchBar></app-tabs-menu>
+</router-outlet>
