--- a/src/app/components/top-menu/top-menu.component.scss
+++ b/src/app/components/top-menu/top-menu.component.scss
@@ -1,72 +1,117 @@
 section.top {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 99;
-  
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 99;
+
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  background-color: whitesmoke;
+  border-bottom: 1px solid #bfbfbf;
+
+  .col {
     width: 100%;
-    height: 64px;
-  
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-  
-    background-color: #f3f3f3;
-    border-bottom: 1px solid #bfbfbf;
-  
-    i {
-      margin: 0 10px;
-      font-size: 27px;
-      color: #3F4448;
-      cursor: pointer;
-    }
-  
-    span {
-      color: #F6F8FA;
-      text-transform: uppercase;
-      font-weight: 600;
-    }
-  
-    div.input-icons {
-      width: 100%;
-      margin-right: 85px;
-  
-      i {
-        position: absolute;
-        font-size: 20px;
-        padding: 3px 5px;
-      }
-  
-      input#search {
-        width: 100%;
-        padding: 6px 30px;
-        margin: 0 10px;
-        border-radius: 5px;
-        background-color: #d6d6d6;
-        color: #24292E;
-        border: unset;
-        outline: none;
-        transition: 50ms box-shadow ease-in-out;
-      }
-  
-      input#search:focus {
-        box-shadow: 0px 0px 1px 2px #2f3640;
-      }
-    }
-  
-    &.dark {
-      background-color: #24292E;
-  
-      i {
-        color: #F6F8FA;
-      }
-  
-      div.input-icons {
-        input#search {
-          background-color: #3F4448;
-          color: #F6F8FA;
+    flex-direction: column;
+
+    div.filters {
+      padding: 0 0 15px;
+      width: 250px;
+
+      div.row {
+        flex-wrap: wrap;
+
+        label {
+          width: auto;
+          padding: 2px 15px;
+          margin: 3px 5px;
+          display: flex;
+          justify-content: center;
+          border-radius: 11px;
+          border: solid 0.5px #c7c7c7;
+          background-color: white;
+
+          img {
+            width: 40px;
+            -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+            filter: grayscale(100%);
+            &.selected{
+              -webkit-filter: grayscale(0); /* Safari 6.0 - 9.0 */
+              filter: grayscale(0);
+            }
+          }
         }
       }
     }
-  
   }
+
+  .row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+  }
+
+
+  i {
+    margin: 0 10px;
+    font-size: 27px;
+    color: #3F4448;
+    cursor: pointer;
+  }
+
+  span {
+    color: #F6F8FA;
+    text-transform: uppercase;
+    font-weight: 600;
+  }
+
+  div.input-icons {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 25px;
+
+    i {
+      position: absolute;
+      font-size: 20px;
+      padding: 3px 5px;
+    }
+
+    input#search {
+      padding: 6px 30px;
+      margin: 0 10px;
+      border-radius: 11px;
+      background-color: #d6d6d6;
+      color: #24292E;
+      border: unset;
+      outline: none;
+      transition: 50ms box-shadow ease-in-out;
+    }
+
+    input#search:focus {
+      box-shadow: 0px 0px 1px 2px #2f3640;
+    }
+  }
+
+  &.dark {
+    background-color: #24292E;
+
+    i {
+      color: #F6F8FA;
+    }
+
+    div.input-icons {
+      input#search {
+        background-color: #3F4448;
+        color: #F6F8FA;
+      }
+    }
+  }
+
+}
