--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,8 +1,3 @@
-<app-top-menu></app-top-menu>
-<div id="page-wrapper">
-    <app-result-list #resultList></app-result-list>
-    <!-- <section id="search-button" [ngClass]="this.hideSearchButton">
-        <button><i class="material-icons">search</i></button>
-    </section> -->
+<div class="wrapper">
+  <app-result-list #resultList></app-result-list>
 </div>
-<app-tabs-menu #searchBar></app-tabs-menu>
