--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,12 +1,8 @@
-div#page-wrapper {
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  background-color: white;
+div.wrapper {
+  height: auto;
+  margin: 0;
+  padding: 150px 0;
+  background-color: whitesmoke;
 
   #placeholder {
     p {
@@ -54,23 +50,4 @@ div#page-wrapper {
   &.dark {
     background-color: #3F4448;
   }
-
-  // #search-button.hide {
-  //   animation-duration: 0.5s;
-  //   animation-name: "hide-search-button";
-  //   bottom: -10%;
-  // }
-
-  // #search-button.visible {
-  //   animation-duration: 0.5s;
-  //   animation-name: "visible-search-button";
-  // }
-
-  app-result-list {
-    width: 100%;
-    height: 100%;
-    margin: 64px 0px 80px;
-    position: fixed;
-  }
-
 }
